changed setup to be cli based

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,6 @@ classifier =
     Topic :: Utilities
     Framework :: Sphinx
 [entry_points]
-console_scripts = script2package=script2package:main
+console_scripts = lazydoc=lazydoc.cli:main
 [files]
 packages = lazydoc
